--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,32 @@
 .unorder-list>li>p {
     margin-bottom: 0px;
 }
+
+.input-file {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    border: 2px dashed #000;
+    border-radius: 10px;
+}
+
+.input-file>div {
+    width: 100%;
+    height: 50%;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.input-file>div>p {
+    font-size: 1.5rem;
+}
+
+.input-file input {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    opacity: 0;
+}
