--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+/* Mot so css bi thay doi do Bootstrap */
+
+a {
+    color: #2271b1;
+}
+
+#titlediv #title-prompt-text {
+    padding: 0 10px;
+}
+
 /* Tat ca do an */
 
 .inline-edit-date,
@@ -110,7 +120,7 @@
     position: relative;
     width: 100%;
     height: 200px;
-    border: 2px dashed #000;
+    border: 2px dashed #0FA7F6;
     border-radius: 10px;
 }
 
@@ -133,4 +143,17 @@
     height: 100%;
     outline: none;
     opacity: 0;
+}
+
+.input-file small {
+    font-size: 1rem;
+}
+
+#input-file-name {
+    font-weight: 600;
+}
+
+label>p {
+    word-wrap: break-word;
+    max-width: 15ch;
 }
